# esp32s3-wifi_WeatherClock

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/app_button/: CMakeLists.txt  app_button.c  register_button.c
components/app_button/include/: app_button.h  register_button.h
components/app_clock/: CMakeLists.txt  app_clock.c
components/app_clock/include/: app_clock.h
components/app_http_data/: CMakeLists.txt  app_http_data.c  http_get_weather.c
components/app_http_data/include/: app_http_data.h  http_get_weather.h
components/app_ui/: CMakeLists.txt  app_message.c  app_ui.c  app_ui_set.c  lvgl_set.c  ui_button.c  ui_home.c
components/app_ui/include/: app_message.h  app_ui.h  app_ui_set.h  lvgl_set.h  ui_button.h  ui_home.h
components/bsp_button/: idf_component.yml  iot_button.c
components/cmake_utilities/: idf_component.yml
components/esp_lvgl_port/: idf_component.yml
components/lcd_ST7789/: CMakeLists.txt  lcd_ST7789.c  lvgl_set.c
components/lcd_ST7789/include/: lcd_ST7789.h  lvgl_set.h
components/lvgl/: idf_component.yml  lv_conf.h
components/lvgl/src/font/: myfont_alimama_20.c
components/wifi_sta/: CMakeLists.txt  wifi_http_client.c  wifi_mode_sta.c  wifi_sntp_get.c
components/wifi_sta/include/: wifi_http_client.h  wifi_mode_sta.h  wifi_sntp_get.h
main/: app_main.c
